crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__ampchars.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "phonological fragments",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "foo",
                  "type": "text"
                }
              ],
              "raw_text": "foo",
              "span": {
                "end": 190,
                "start": 187
              },
              "type": "word"
            },
            {
              "category": "nonword",
              "content": [
                {
                  "content": "au",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 196,
                      "start": 195
                    }
                  },
                  "type": "syllable_pause"
                },
                {
                  "content": "bg",
                  "type": "text"
                }
              ],
              "raw_text": "&~au^bg",
              "span": {
                "end": 198,
                "start": 191
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "bar",
                  "type": "text"
                }
              ],
              "raw_text": "bar",
              "span": {
                "end": 202,
                "start": 199
              },
              "type": "word"
            },
            {
              "category": "nonword",
              "content": [
                {
                  "content": "foo",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 209,
                      "start": 208
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": {
                    "span": {
                      "end": 210,
                      "start": 209
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": "bar",
                  "type": "text"
                }
              ],
              "raw_text": "&~foo::bar",
              "span": {
                "end": 213,
                "start": 203
              },
              "type": "word"
            },
            {
              "category": "nonword",
              "content": [
                {
                  "content": "foo",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 220,
                      "start": 219
                    }
                  },
                  "type": "lengthening"
                },
                {
                  "content": {
                    "span": {
                      "end": 221,
                      "start": 220
                    }
                  },
                  "type": "lengthening"
                }
              ],
              "raw_text": "&~foo::",
              "span": {
                "end": 221,
                "start": 214
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
