crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__argha-8m.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "ara"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Chariba",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Hayat",
            "role": "Investigator",
            "speaker_code": "HAY"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "8;09.12",
        "corpus": "aarsenbos",
        "language": "ara",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "aarsenbos",
        "language": "ara",
        "role": "Investigator",
        "speaker": "HAY",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "20-JUN-1991",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "category": "nonword",
              "content": [
                {
                  "content": "gʰan",
                  "type": "text"
                }
              ],
              "raw_text": "&~gʰan",
              "span": {
                "end": 218,
                "start": 211
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "8;09.12",
        "corpus": "aarsenbos",
        "language": "ara",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Chariba",
      "role": "Target_Child"
    },
    "HAY": {
      "birth_date": null,
      "code": "HAY",
      "id": {
        "corpus": "aarsenbos",
        "language": "ara",
        "role": "Investigator",
        "speaker": "HAY"
      },
      "name": "Hayat",
      "role": "Investigator"
    }
  }
}
